# vcs

./: .gitignore  CMakeLists.txt  README.md  vcs.pro  vcs.rc
cmake/: FindVision.cmake
docs/user-manual/src/: faq.md
src/: main.cpp
src/capture/: capture.h
src/capture/rgbeasy/: capture_rgbeasy.cpp
src/display/: prevent_screensaver_windows.cpp
src/display/qt/: d_main.cpp  keyboard_shortcuts.cpp
src/display/qt/dialogs/: about_dialog.cpp  capture_dialog.cpp  control_panel_dialog.cpp  filter_graph_dialog.cpp  overlay_dialog.cpp  signal_dialog.cpp  video_presets_dialog.cpp  window_options_dialog.cpp
src/display/qt/dialogs/ui/: overlay_dialog.ui
src/display/qt/stylesheets/: font-windows.qss
src/display/qt/windows/: output_window.cpp
